[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/control/GUI.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/GILSANUB.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/gui_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/textures/bubbles_red.png" type="Texture" id=4]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 0, 0, 0.501961, 1, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 100

[sub_resource type="DynamicFont" id=3]
size = 18
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 512, 256 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.105882, 0.105882, 0.105882, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="DynamicFont" id=6]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxLine" id=8]
thickness = 3

[sub_resource type="DynamicFont" id=9]
size = 18
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0, 0.73057, 1 )
colors = PoolColorArray( 0.166113, 0, 0.17627, 1, 0.27724, 0, 0.434871, 1, 0.452635, 0, 0.766113, 1 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="StyleBoxTexture" id=12]
texture = SubResource( 11 )
region_rect = Rect2( 0, 0, 2048, 1 )

[sub_resource type="DynamicFont" id=13]
size = 14
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=14]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("RaspberryJam:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RaspberryJam:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=15]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("RaspberryJam:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RaspberryJam:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
margin_bottom = -1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RaspberryJam" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RedLeft" type="TextureRect" parent="RaspberryJam"]
anchor_bottom = 1.0
margin_right = 100.0
texture = SubResource( 2 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RedRight" type="TextureRect" parent="RaspberryJam"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
texture = SubResource( 2 )
stretch_mode = 1
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthContainerMargin" type="MarginContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 135.0
margin_bottom = 76.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthContainerGroup" type="VBoxContainer" parent="HealthContainerMargin"]
margin_right = 125.0
margin_bottom = 66.0
rect_min_size = Vector2( 0, 50 )

[node name="HealthLabel" type="Label" parent="HealthContainerMargin/HealthContainerGroup"]
margin_right = 125.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 3 )
text = "Health"

[node name="HealthBar" type="ProgressBar" parent="HealthContainerMargin/HealthContainerGroup"]
margin_top = 27.0
margin_right = 125.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 25 )
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 50.0
percent_visible = false

[node name="BoostContainerMargin" type="MarginContainer" parent="."]
anchor_left = 0.986
anchor_top = 0.928
anchor_right = 0.99
anchor_bottom = 1.008
margin_left = -123.744
margin_top = -53.73
margin_right = -2.84418
margin_bottom = -5.64978
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoostContainerGroup" type="VBoxContainer" parent="BoostContainerMargin"]
margin_right = 124.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 50 )

[node name="BombsGroup" type="HBoxContainer" parent="BoostContainerMargin/BoostContainerGroup"]
margin_right = 124.0
margin_bottom = 21.0

[node name="bombsLabel" type="Label" parent="BoostContainerMargin/BoostContainerGroup/BombsGroup"]
margin_right = 75.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 6 )
text = "Bombs:"

[node name="numBombsLabel" type="Label" parent="BoostContainerMargin/BoostContainerGroup/BombsGroup"]
margin_left = 79.0
margin_right = 93.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 1, 0.0156863, 1 )
text = "0"

[node name="HSeparator" type="HSeparator" parent="BoostContainerMargin/BoostContainerGroup"]
margin_top = 25.0
margin_right = 124.0
margin_bottom = 29.0
custom_styles/separator = SubResource( 8 )

[node name="BoostLabel" type="Label" parent="BoostContainerMargin/BoostContainerGroup"]
margin_top = 33.0
margin_right = 124.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 9 )
text = "Boost"

[node name="BoostBar" type="ProgressBar" parent="BoostContainerMargin/BoostContainerGroup"]
margin_top = 60.0
margin_right = 124.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 25 )
custom_styles/fg = SubResource( 12 )
custom_styles/bg = SubResource( 5 )
max_value = 1.0
value = 1.0
percent_visible = false

[node name="ScoreContainerMargin" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -789.275
margin_top = 10.0
margin_right = -10.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="VBoxContainer" parent="ScoreContainerMargin"]
margin_right = 779.0
margin_bottom = 45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabelText" type="Label" parent="ScoreContainerMargin/Score"]
margin_right = 779.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 3 )
text = "Score"
align = 2

[node name="ScoreLabelValue" type="Label" parent="ScoreContainerMargin/Score"]
margin_top = 27.0
margin_right = 779.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 13 )
text = "0"
align = 2

[node name="RaspberryJamAnimations" type="AnimationPlayer" parent="."]
anims/Injure_effect_fadeIn = SubResource( 14 )
anims/Injure_effect_fadeOut = SubResource( 15 )
